--- a/clinique/App.config
+++ b/clinique/App.config
@@ -3,4 +3,10 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+  <connectionStrings>
+    <clear />
+    <add name="CliniqueDB"
+     providerName="System.Data.ProviderName"
+     connectionString="Data Source=gigster-laptop\sqlexpress;Initial Catalog=CliniqueDB;Integrated Security=True" />
+  </connectionStrings>
 </configuration>
