--- a/clinique/clinique.csproj
+++ b/clinique/clinique.csproj
@@ -45,6 +45,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CreatePatient.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CreatePatient.Designer.cs">
+      <DependentUpon>CreatePatient.cs</DependentUpon>
+    </Compile>
     <Compile Include="Room.cs" />
     <Compile Include="CreateRoom.cs">
       <SubType>Form</SubType>
@@ -61,6 +67,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="roomDAL.cs" />
+    <EmbeddedResource Include="CreatePatient.resx">
+      <DependentUpon>CreatePatient.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CreateRoom.resx">
       <DependentUpon>CreateRoom.cs</DependentUpon>
     </EmbeddedResource>
