--- a/clinique/clinique.csproj
+++ b/clinique/clinique.csproj
@@ -45,6 +45,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Doctor.cs" />
+    <Compile Include="DoctorDAL.cs" />
     <Compile Include="Patient.cs" />
     <Compile Include="CreatePatient.cs">
       <SubType>Form</SubType>
