--- a/clinique/clinique.csproj
+++ b/clinique/clinique.csproj
@@ -45,6 +45,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CreateDoctor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CreateDoctor.Designer.cs">
+      <DependentUpon>CreateDoctor.cs</DependentUpon>
+    </Compile>
     <Compile Include="Doctor.cs" />
     <Compile Include="DoctorDAL.cs" />
     <Compile Include="Patient.cs" />
@@ -71,6 +77,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="roomDAL.cs" />
+    <EmbeddedResource Include="CreateDoctor.resx">
+      <DependentUpon>CreateDoctor.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CreatePatient.resx">
       <DependentUpon>CreatePatient.cs</DependentUpon>
     </EmbeddedResource>
