Added Dataset for Main dashboard

--- a/clinique/App.config
+++ b/clinique/App.config
@@ -1,12 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
   <connectionStrings>
     <clear />
-    <add name="CliniqueDB"
-     providerName="System.Data.ProviderName"
-     connectionString="Data Source=gigster-laptop\sqlexpress;Initial Catalog=CliniqueDB;Integrated Security=True" />
+    <add name="CliniqueDB" connectionString="Data Source=gigster-laptop\sqlexpress;Initial Catalog=CliniqueDB;Integrated Security=True"
+      providerName="System.Data.ProviderName" />
+    <add name="clinique.Properties.Settings.CliniqueDBConnectionString"
+      connectionString="Data Source=gigster-laptop\sqlexpress;Initial Catalog=CliniqueDB;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
